<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Higher or Lower</string>

    <string name="button_higher">Higher</string>
    <string name="button_same">Same</string>
    <string name="button_lower">Lower</string>
    
    <string name="current_card_description">Current card</string>
    
    <string name="button_single_player">Single Player</string>
    <string name="button_multiplayer">Multiplayer</string>
    
    <string name="button_highscore_mode">Highest Score</string>
    <string name="button_sudden_death">Sudden death</string>
    
	<string name="sign_out">Sign Out</string>
	<string name="button_post_to_leaderboard">Post to Leaderboard</string>
	
	<string name="view_leaderboards">View Leaderboards</string>
	<string name="button_back">Back</string>
	
</resources>
