<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/layout_background"
    android:gravity="center"
    tools:context=".SinglePlayerFragment" >

    <Button
        android:id="@+id/button_highscore_mode"
        style="@style/menu_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_highscore_mode"/>

    <Button
        android:id="@+id/button_sudden_death"
        style="@style/menu_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_highscore_mode"
        android:text="@string/button_sudden_death" />

     <Button
        android:id="@+id/button_back_to_splash_screen"
        style="@style/menu_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:layout_below="@id/button_sudden_death"/>
    
</RelativeLayout>